<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VpnStackAppActivity">

    <Button
        android:id="@+id/buttonStartVpn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/vpn_start"
        app:layout_constraintBottom_toTopOf="@+id/buttonStopVpn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchCatchApp"
        android:layout_width="252dp"
        android:layout_height="26dp"
        android:text="@string/catch_app"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="158dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="209dp" />

    <TextView
        android:id="@+id/textViewStatusLabel"
        android:layout_width="126dp"
        android:layout_height="26dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical|end"
        android:text="@string/status"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/textViewStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="142dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/status_nstarted"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toEndOf="@+id/textViewStatusLabel"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/buttonStopVpn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/vpn_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartVpn"
        app:layout_constraintVertical_bias="0.033" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="68dp" />

    <TextView
        android:id="@+id/textViewPackage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/filt_package"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/editTextPackage"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/package_name_hint"
        android:inputType="textPersonName"
        android:maxLength="256"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPackage"
        app:layout_constraintVertical_bias="0.428" />

</androidx.constraintlayout.widget.ConstraintLayout>
